cmake_minimum_required(VERSION 3.26)
project(c_tutorials)

set(CMAKE_CXX_STANDARD 14)

add_executable(c_tutorials
        .vscode/16.c
        subj/main.c
        1.c
        10.c
        11.c
        12.c
        13.c
        14.c
        15.c
        16.c
        17.c
        2.c
        2nd.c
        3.c
        4.c
        5.c
        6.c
        7.c
        add.c
        addnum.c
        arr.c
        array.c
        Bibek.c
        bubble.c
        "Char Qs.c"
        circle.c
        "DAA ASN 2.1.c"
        "DAA ASN 2.2.c"
        "DAA ASN 2.4.c"
        "DAA ASN2.3.c"
        even.c
        "exam pract 4.c"
        "exam pract 5.c"
        "exam pract1.c"
        "exam pract2.c"
        "exam pract3.c"
        "exampract 5.c"
        fgets_fputs.c
        "incersion sort.c"
        insertion.c
        jk.c
        l.c
        LinearSearch.cpp
        main.c
        mnc.c
        MNC2.c
        odd.c
        P1.c
        p2.c
        p3.c
        p4.c
        p5.c
        p6.c
        p7.c
        p8.c
        p9.c
        parameters.c
        parctice.c
        pract3.c
        pract5.c
        pract6.c
        pract7.c
        practiceprog.c
        prime.c
        rectangle.c
        recursion.c
        refact.c
        reverse.c
        square.c
        stack.c
        string.c
        struct.c
        sturcture.c
        subjarr.c
        sum.c
        sum1.c
        swapusr.c
        swapusrchk.c
        switch.c
        swpcheck.c
        swtchgrade.c
        ter1.c
        text.c
        tut.c
        Untitled1.c
        Untitled1.cpp
        variable.c
        void.c)
